# ChatOps

./: .gitignore  README.md  auth.test.py  docker-compose.yml  kafka_tools.py  pyproject.toml  simple_producer.py  start-grafana.sh  tasks.py
chatops/etc/: grafana.ini
chatops/prometheus-jmx-exporter/: Dockerfile  entrypoint.sh
chatops/slackbot/: __main__.py
development/: docker-compose.yml
etc/: prometheus.yml
etc/provisioning/dashboards/: dashboard.yml
slackbot/: bot.py
